<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group
        android:id="@+id/menu_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_my_listing"
            android:icon="@drawable/ic_listing_icon"
            android:title="@string/menu_my_listing"
            android:color="@color/colorPrimaryDark"
            />
        <item
            android:id="@+id/menu_item_bulk_listing"
            android:icon="@drawable/ic_bulk_listing"
            android:title="@string/menu_bulk_listing" />
        <item
            android:id="@+id/menu_item_speedy_sell"
            android:icon="@drawable/ic_speedy_sell"
            android:title="@string/menu_speedy_sell" />
        <item
            android:id="@+id/menu_item_shipping_center"
            android:icon="@drawable/ic_shipping_center"
            android:title="@string/menu_shipping_center" />
    </group>
    <group
        android:id="@+id/menu_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_available_fund"
            android:icon="@drawable/ic_funds_icon"
            android:title="@string/menu_available_fund" />
        <item
            android:id="@+id/menu_item_withdrawal_history"
            android:icon="@drawable/ic_withdrawal_history"
            android:title="@string/menu_withdraw_history" />
    </group>
    <group
        android:id="@+id/menu_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_recommend_brand"
            android:icon="@drawable/ic_recommended_brand"
            android:title="@string/menu_recommend_brand" />
        <item
            android:id="@+id/menu_item_referral_rewards"
            android:icon="@drawable/ic_referral_reward"
            android:title="@string/menu_referral_rewards" />
    </group>
    <group
        android:id="@+id/menu_4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_my_orders"
            android:icon="@drawable/ic_my_orders"
            android:title="@string/menu_my_order" />
        <item
            android:id="@+id/menu_item_my_cart"
            android:icon="@drawable/ic_my_cart"
            android:title="@string/menu_my_cart" />
    </group>
    <group
        android:id="@+id/menu_5"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>
