<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.b2infosoft.giftcardup.activity.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/sign_up_ViewFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_name_first"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_name_first"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_name_last"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_name_last"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_email"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_mobile_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_mobile_number"
                        android:inputType="phone" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_password_confirm"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_up_action_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin_bottom"
                    android:layout_marginLeft="@dimen/button_margin_left"
                    android:layout_marginRight="@dimen/button_margin_right"
                    android:layout_marginTop="@dimen/button_margin_top"
                    android:text="@string/sign_up_next" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sign_up_ViewSecond"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_address"
                        android:inputType="textPostalAddress" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_suite_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_suite_number"
                        android:inputType="numberDecimal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_city"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_state"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_zip_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_zip_code"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_company_name"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/input_text_layout_margin_top">

                    <EditText
                        android:id="@+id/sign_up_representative_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sign_up_representative_id"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <Button
                        android:id="@+id/sign_up_action_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/button_margin_bottom"
                        android:layout_marginLeft="@dimen/button_margin_left"
                        android:layout_marginRight="@dimen/button_margin_right"
                        android:layout_marginTop="@dimen/button_margin_top"
                        android:textAllCaps="true"
                        android:text="@string/sign_up_back" />
                    <Button
                        android:id="@+id/sign_up_action_create_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/button_margin_bottom"
                        android:layout_marginLeft="@dimen/button_margin_left"
                        android:layout_marginRight="@dimen/button_margin_right"
                        android:layout_marginTop="@dimen/button_margin_top"
                        android:textAllCaps="true"
                        android:text="@string/sign_up_create_account" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
