<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.b2infosoft.giftcardup.activity.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:textColorHint="@color/login_edit_text_hint">
                <EditText
                    android:id="@+id/username_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_user_name"
                    android:drawablePadding="@dimen/edit_text_padding_left"
                    android:hint="@string/login_username"
                    android:textColor="@color/login_edit_text_text"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_margin_top"
                android:textColorHint="@color/login_edit_text_hint">

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/login_edit_text_text"
                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/edit_text_padding_left"
                    android:hint="@string/login_password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/button_margin_top"
                android:paddingLeft="@dimen/button_padding_left"
                android:paddingRight="@dimen/button_padding_right"
                android:text="@string/login_button"
                android:textSize="@dimen/button_text_font_size"
                android:background="@drawable/button_login_background"
                android:textAllCaps="true"
                android:textColor="@color/app_background" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_view_margin_top"
                android:layout_marginLeft="@dimen/text_view_margin_left"
                android:layout_marginRight="@dimen/text_view_margin_right">

                <TextView
                    android:id="@+id/forgot_password_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:text="@string/login_forgot_password"
                    android:textAllCaps="true"
                    android:textColor="@color/login_forgot_password" />

                <TextView
                    android:id="@+id/sign_up_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/login_sign_up"
                    android:textAllCaps="true"
                    android:textColor="@color/login_sign_up" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
