<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.b2infosoft.giftcardup.fragments.Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_view_padding_left">

                <TextView
                    android:id="@+id/profile_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/profile_member_since"
                    android:textAllCaps="true"
                    android:textColor="@color/profile_text"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/text_view_margin_top"
                android:orientation="vertical">

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profile_user_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_user_icon"
                    app:civ_border="true"
                    app:civ_border_color="@color/border_user_picture"
                    app:civ_border_width="4dp"
                    app:civ_shadow="true"
                    app:civ_shadow_color="@color/border_shadow_user_picture"
                    app:civ_shadow_radius="0"></com.mikhaellopez.circularimageview.CircularImageView>

                <TextView
                    android:id="@+id/profile_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_view_margin_top"
                    android:text="@string/profile_user_name"
                    android:textAllCaps="true"
                    android:textColor="@color/profile_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/profile_account_details_background"
                android:layout_marginTop="@dimen/custom_tab_margin_top">
                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="@dimen/text_view_padding_left">
                    <TextView
                        android:id="@+id/total_saving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textColor="@color/profile_text_view_text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:text="@string/profile_total_saving"
                        android:textColor="@color/profile_text_view_text"/>
                </LinearLayout>
                <View
                    android:layout_width="1dp"
                    android:layout_gravity="center"
                    android:background="@color/profile_account_details_divider"
                    android:layout_height="45dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/text_view_padding_left">
                    <TextView
                        android:id="@+id/total_sold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textColor="@color/profile_text_view_text"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:text="@string/profile_total_sold"
                        android:textColor="@color/profile_text_view_text"/>
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="@dimen/custom_tab_height"
                app:tabGravity="fill"
                app:tabMode="fixed"
                android:background="@color/app_background"/>

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
